pub/patch-che-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: che-ingress
spec:
  rules:
  - host: che.cnative.io
    http:
      paths:
      - backend:
          serviceName: che-host
          servicePort: 5080
        path: /
