pub/patch-keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  rules:
  - host: keycloak.cnative.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 5050
        path: /
